; ModuleID = '/home/carl/AnghaBench/vlc/src/video_output/extr_vout_subpictures.c_spu_channel_DeleteAt.c'
source_filename = "/home/carl/AnghaBench/vlc/src/video_output/extr_vout_subpictures.c_spu_channel_DeleteAt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spu_channel = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.spu_channel*, i64)* @spu_channel_DeleteAt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spu_channel_DeleteAt(%struct.spu_channel* %0, i64 %1) #0 {
  %3 = alloca %struct.spu_channel*, align 8
  %4 = alloca i64, align 8
  store %struct.spu_channel* %0, %struct.spu_channel** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.spu_channel*, %struct.spu_channel** %3, align 8
  %7 = getelementptr inbounds %struct.spu_channel, %struct.spu_channel* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ult i64 %5, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load %struct.spu_channel*, %struct.spu_channel** %3, align 8
  %14 = getelementptr inbounds %struct.spu_channel, %struct.spu_channel* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 1
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %17 = load i64, i64* %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @assert(i32 %20)
  %22 = load %struct.spu_channel*, %struct.spu_channel** %3, align 8
  %23 = getelementptr inbounds %struct.spu_channel, %struct.spu_channel* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 1
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %24, align 8
  %26 = load i64, i64* %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i64 %26
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @subpicture_Delete(i32 %29)
  %31 = load %struct.spu_channel*, %struct.spu_channel** %3, align 8
  %32 = getelementptr inbounds %struct.spu_channel, %struct.spu_channel* %31, i32 0, i32 0
  %33 = load i64, i64* %4, align 8
  %34 = call i32 @vlc_vector_remove(%struct.TYPE_4__* %32, i64 %33)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @subpicture_Delete(i32) #1

declare dso_local i32 @vlc_vector_remove(%struct.TYPE_4__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
